backends/candle/tests/snapshots/test_bert__bert_single.snap
---
source: backends/candle/tests/test_bert.rs
expression: embeddings_single
---
- - -0.59044725
  - -0.25218385
  - 0.14959788
  - 0.055054326
  - -0.11826664
  - -0.16704199
  - -0.23318852
  - -0.07048664
  - -0.19961369
  - -0.29594675
  - -0.7729244
  - 0.14422266
  - -0.29086646
  - -0.18537436
  - -0.9093221
  - -0.019912753
  - 0.028570818
  - 0.34820467
  - -1.0033808
  - -0.4169774
  - 0.19350986
  - 0.40060568
  - -0.3910339
  - -0.18893504
  - 0.45300367
  - 0.2567775
  - 0.17711996
  - -0.31422564
  - 0.12515326
  - -0.08413408
  - 0.6500565
  - -0.23057108
  - 0.18416035
  - 0.49635428
  - -0.36540058
  - 0.8378605
  - -0.5513199
  - 0.10330733
  - 0.09406503
  - -0.21011235
  - -0.294878
  - -0.18855713
  - -0.009985884
  - 0.1868694
  - 0.92586917
  - 0.33937162
  - -0.08204416
  - -0.6029757
  - 0.1529299
  - 0.21019182
  - -0.20914483
  - -0.13881305
  - -0.3829951
  - 0.6374732
  - 0.0039202413
  - 0.09873913
  - 0.27915856
  - -0.021567034
  - -0.5371338
  - 0.32010445
  - 0.48553208
  - -0.6939637
  - 0.024762621
  - 0.23580453
  - 0.29508448
  - -0.27021295
  - 0.048726488
  - 0.11051794
  - 0.5391807
  - -0.7710751
  - 0.4212282
  - 0.4748419
  - -0.052861698
  - 0.0797782
  - 0.1436118
  - -0.43832943
  - 0.217566
  - 0.055354927
  - 0.74646956
  - -0.21855174
  - 0.726733
  - 0.54959804
  - -0.11634005
  - 0.36827034
  - 1.0121464
  - -0.5172264
  - 0.117365904
  - 0.069850266
  - -0.6782804
  - -0.5236724
  - -0.27104244
  - -0.52527153
  - -0.59516984
  - -0.0011272387
  - -0.29228163
  - -0.09563615
  - -0.05197343
  - -0.9138807
  - -0.404217
  - 0.38407364
  - -0.02237424
  - 0.063146666
  - 0.417561
  - -0.046705563
  - -0.06901024
  - 0.090586975
  - 0.42655632
  - 0.10948127
  - 0.3103543
  - -0.6246739
  - -0.19219592
  - 0.29426685
  - 0.18328531
  - -0.18981598
  - 0.16418995
  - -0.19344936
  - -0.102094464
  - -0.040927645
  - -0.14817163
  - 0.69175273
  - -0.8734291
  - -0.059818327
  - -0.2451848
  - -0.128597
  - -0.29166618
  - -0.18874489
  - -0.36691993
  - -0.000000000000000000000000000000029240263
  - -0.0039365417
  - -0.3672316
  - -0.45365587
  - 0.049563654
  - 0.32002425
  - -0.4268016
  - -0.20276095
  - 0.09399402
  - -0.4206237
  - 0.44631168
  - -0.14178735
  - 0.08153609
  - -0.13850209
  - 1.1363457
  - 0.34803
  - 0.095522776
  - -0.6442185
  - 0.5022718
  - 0.8345644
  - -0.59522617
  - -0.06076808
  - 0.31911185
  - -0.17580011
  - 0.02254184
  - -0.054860268
  - -0.107278086
  - 0.15626863
  - 0.1663959
  - 0.21630354
  - -0.028444754
  - -0.5627598
  - 0.07629131
  - -0.16489862
  - -0.06929284
  - 0.36516023
  - 0.042009056
  - 0.018344928
  - -0.06264574
  - 0.30054623
  - -0.26357192
  - 0.34574562
  - 0.062161356
  - -0.061938882
  - -0.433124
  - -0.20661528
  - -0.16830018
  - 0.20767
  - -0.711672
  - -0.65648043
  - -0.38578954
  - -0.052828006
  - -0.32648903
  - -0.18350767
  - -0.4606175
  - 0.29337963
  - 0.27799198
  - 0.21287881
  - 0.20646057
  - 0.12392725
  - 0.18231007
  - 0.5340518
  - 0.3999032
  - -0.46907583
  - 0.66455936
  - -0.09668916
  - 0.1617171
  - 0.6648928
  - 0.6808013
  - 1.0480411
  - -0.09472255
  - 0.029774768
  - 0.096920714
  - 0.20310624
  - -0.5730705
  - -0.076955006
  - 0.08091669
  - 0.15485139
  - -0.26107484
  - -0.2566574
  - 0.7857507
  - -0.4705803
  - 0.30938503
  - -0.2557015
  - 0.0062560183
  - -0.53040594
  - 0.60793704
  - -0.24610898
  - -0.30209193
  - 0.26118812
  - 0.014781826
  - -0.7021666
  - -0.0494226
  - -0.14813234
  - -0.0792755
  - -0.16526099
  - 0.000000000000000000000000000000021845316
  - -0.2516138
  - 0.4341392
  - -0.8757459
  - 0.71753603
  - 0.29055136
  - 0.0077962554
  - -0.6243044
  - 0.35534325
  - -0.55283695
  - 0.18967111
  - 0.2028834
  - -0.035638604
  - 0.4526802
  - 0.109326124
  - 0.19147933
  - -0.169202
  - -0.35632873
  - -0.3493495
  - -0.4700931
  - -0.26941234
  - 0.23525862
  - 0.5886017
  - -0.33800325
  - -0.2457062
  - -0.15958826
  - -0.2248775
  - -0.25580308
  - 0.12511872
  - -0.10618194
  - 0.28506988
  - 0.1719886
  - -0.32835636
  - -0.6782684
  - 0.4481531
  - 0.2926577
  - 0.50614727
  - 0.5929094
  - -0.28529838
  - -0.26264638
  - -0.42411894
  - 0.21713856
  - -0.00968868
  - 0.18806815
  - 0.25439212
  - -0.3193262
  - -0.05895394
  - 0.006650635
  - -0.043817554
  - 0.3271231
  - -0.19685973
  - 0.31065607
  - 0.027760554
  - 0.034484897
  - -0.3571306
  - -0.2585732
  - -0.07837237
  - -0.109016135
  - 0.1871116
  - 0.1438361
  - 0.4352612
  - -0.18126692
  - -0.49506158
  - -0.11632758
  - -0.180747
  - -0.16934863
  - 0.80521965
  - -0.59641445
  - 0.62855446
  - 0.03234104
  - 0.14520487
  - 0.8091442
  - 0.1085838
  - 0.3470032
  - 0.5807448
  - -0.5395771
  - -0.54348
  - 0.05686935
  - -0.09498303
  - -0.33424646
  - -0.18342055
  - 0.39793923
  - -0.8092195
  - -0.10401481
  - 0.6530638
  - -0.09104773
  - 0.1035829
  - -0.24646021
  - 0.5131662
  - -0.35961255
  - -0.026079278
  - -0.24173594
  - 0.104677096
  - -0.63350594
  - 0.0022966862
  - -0.5273205
  - -0.00000009196577
  - -0.19923674
  - 0.08858663
  - 0.5564938
  - -0.80046415
  - 0.30862954
  - -0.18752082
  - 0.10184043
  - 0.82070214
  - 0.02433352
  - 0.077496015
  - 0.6026441
  - 0.014297307
  - -0.5296707
  - -0.15351765
  - 0.026841357
  - 0.61098915
  - 0.4599877
  - -0.00048499875
  - 0.41514826
  - 0.02483182
  - 0.8714782
  - 0.32069954
  - 0.120145075
  - -0.055947807
  - 0.22077382
  - -0.6302567
  - 0.36912733
  - 0.6807194
  - 0.10634257
  - -0.4253358
  - -0.20274131
  - 0.53383744
  - -0.12419947
  - -0.16531353
  - 0.019658228
  - 0.88533956
  - 0.30775255
  - -0.28941098
  - -0.058860738
  - -0.4053966
  - -0.40402624
  - 1.1375592
  - 0.27809873
  - -0.0683005
  - -0.468144
  - 0.0898597
  - 0.31687117
  - -0.054420177
  - 0.14721896
  - 0.117017254
  - -0.16132064
  - 0.51470727
  - 0.62043417
  - 0.6421295
  - -0.03669672
  - 0.119013146
  - 0.017730428
  - -0.52590543
  - -0.16212669
  - 0.73669946
  - -0.07891034
  - 0.54164106
  - 0.28229672
  - 0.277058
