backends/candle/tests/snapshots/test_bert__bert_single_pooled.snap
---
source: backends/candle/tests/test_bert.rs
expression: embeddings_single
---
- - -0.023654167
  - -0.52676415
  - 0.17879222
  - -0.14631018
  - -0.0012304857
  - 0.10524232
  - -0.122629605
  - 0.020288866
  - -0.2722713
  - -0.34148085
  - -0.4129303
  - 0.086731866
  - -0.40046513
  - -0.21976268
  - -0.54023796
  - -0.10144226
  - -0.21477659
  - 0.5226394
  - -0.37936345
  - -0.036409836
  - 0.08668409
  - 0.1086682
  - -0.027627755
  - -0.19582735
  - -0.046200663
  - 0.080952235
  - 0.1404888
  - -0.47739443
  - 0.11176224
  - -0.65961015
  - 0.21138409
  - -0.27615795
  - -0.13641879
  - 0.09633229
  - -0.2676389
  - 0.3603589
  - -0.3899775
  - 0.0071902107
  - 0.1804607
  - 0.11743762
  - -0.21450089
  - -0.032059956
  - 0.30788776
  - 0.1553871
  - 0.2626615
  - 0.12085234
  - 0.016424216
  - -0.40641686
  - 0.1150334
  - -0.029750802
  - -0.38167506
  - -0.070594735
  - -0.19155878
  - 0.537046
  - -0.06021626
  - -0.06772572
  - -0.05716769
  - 0.17114682
  - -0.23583116
  - -0.1086631
  - 0.08157606
  - -0.5647195
  - -0.06860625
  - -0.11559559
  - -0.0965386
  - -0.0190783
  - 0.002576448
  - 0.1099955
  - 0.10729998
  - -0.09817177
  - 0.56348014
  - 0.41471606
  - -0.12142059
  - -0.19750829
  - 0.16299887
  - -0.030180786
  - 0.20278229
  - 0.10212238
  - 0.6028231
  - -0.10820262
  - 0.20531106
  - 0.3243218
  - 0.08397082
  - -0.12163306
  - 0.4504347
  - -0.39893135
  - -0.29151237
  - -0.16034193
  - -0.2061674
  - -0.30862927
  - -0.23093429
  - -0.0021886039
  - -0.12116344
  - -0.1735694
  - -0.38093796
  - 0.020406574
  - 0.22117905
  - -0.5174606
  - -0.2805522
  - 5.5523973
  - -0.35641134
  - -0.011722986
  - 0.16576922
  - -0.18462704
  - 0.24236059
  - 0.37619537
  - -0.0019028662
  - -0.13669048
  - 0.38033253
  - -0.3413139
  - -0.036127023
  - 0.16732605
  - 0.16285902
  - 0.19078459
  - 0.31702384
  - -0.22917935
  - -0.099969044
  - -0.11953231
  - 0.16938762
  - 0.30885178
  - -0.6723836
  - -0.26018512
  - -0.28622177
  - -0.04982245
  - -0.42623213
  - -1.1589856
  - -0.19330288
  - -0.000000000000000000000000000000049437155
  - 0.30554825
  - -0.105459675
  - -0.17223778
  - 0.1443852
  - 0.11276121
  - -0.22509041
  - 0.009600039
  - -0.1269165
  - -0.35549372
  - -0.04640243
  - -0.2854102
  - -0.20964679
  - -0.19386233
  - 0.5982058
  - -0.005713612
  - 0.16587001
  - 0.08550348
  - -0.08043372
  - 0.029301174
  - -0.43462336
  - 0.08669722
  - -0.0038930923
  - -0.20084748
  - 0.023781119
  - -0.02908467
  - -0.06730175
  - 0.052111942
  - -0.05600084
  - 0.08206941
  - -0.2716386
  - -0.28698114
  - -0.14848198
  - 0.24304156
  - -0.16186668
  - 0.14447157
  - -0.11868012
  - -0.18906838
  - 0.3536841
  - 0.20451783
  - -0.07352088
  - 0.29962012
  - 0.10955269
  - -0.09369629
  - -0.43238357
  - 0.02947108
  - -0.012709908
  - 0.53637195
  - -0.32215708
  - -0.092856005
  - -0.00255025
  - 0.054897625
  - -0.083843775
  - -0.008276634
  - -0.41329274
  - -0.01279984
  - -0.11031337
  - 0.22510187
  - 0.41782
  - 0.32100502
  - 0.27524796
  - 0.14740685
  - -0.050505348
  - -0.10400839
  - 0.3337615
  - -0.044267982
  - -0.030969493
  - 0.4701241
  - 0.2465635
  - 0.53519565
  - -0.049157448
  - -0.17961046
  - 0.12765546
  - -0.24247898
  - -0.3725502
  - 0.1880652
  - -0.20185228
  - 0.08062945
  - -0.112816155
  - -0.1433468
  - 0.36518428
  - 0.10675419
  - 0.28610563
  - 0.12599063
  - -0.014855888
  - -0.0979277
  - 0.4236383
  - -0.11939525
  - -0.17800802
  - 0.10417412
  - 0.18547171
  - -0.034532372
  - 0.21523322
  - 0.058159545
  - 0.027655685
  - -0.106183514
  - 0.000000000000000000000000000000044021635
  - -0.009982072
  - 0.21084458
  - -0.46962073
  - -0.0577754
  - 0.02858145
  - 0.025201239
  - -0.15010929
  - -0.016350048
  - -0.2101885
  - 0.03414867
  - 0.37485406
  - -0.114442974
  - -0.10079034
  - -0.11115379
  - 0.08012276
  - -0.2517178
  - -0.11848234
  - -0.10415921
  - -0.09254469
  - -0.2079341
  - 0.30255195
  - 0.041006904
  - -0.09998594
  - -0.038255725
  - 0.17252897
  - 0.113612846
  - -0.015649885
  - 0.26930827
  - -0.05005163
  - 0.38983247
  - -0.12829626
  - -0.2277067
  - -0.2330831
  - 0.22531742
  - -0.059441715
  - 0.21788535
  - 0.054975893
  - -0.28623903
  - -0.09237163
  - -0.009172726
  - 0.24530813
  - 0.23550203
  - -0.23356006
  - -0.08299868
  - -0.054290168
  - -0.10816454
  - 0.052331813
  - -0.013567934
  - 0.25640804
  - -0.098346
  - -0.12791125
  - 0.04103943
  - -0.030744314
  - 0.0043660887
  - -0.29567918
  - 0.02927961
  - -0.19114313
  - 0.14988819
  - 0.1986867
  - 0.33842194
  - -0.29369685
  - -0.49181703
  - -0.19141254
  - -0.3524317
  - -0.3355205
  - 0.5040812
  - -0.2272889
  - 0.46909633
  - 0.015434149
  - -0.07471244
  - -0.11504105
  - 0.28490585
  - -0.06827252
  - 0.35431433
  - -0.31561506
  - -0.30799872
  - -0.11282809
  - -0.2094776
  - -0.11498904
  - -0.014505088
  - 0.36151147
  - -0.348227
  - 0.008035673
  - 0.429532
  - 0.26169035
  - 0.33646888
  - -0.052601017
  - 0.30237794
  - -0.2092216
  - -0.07744071
  - -0.247808
  - 0.30349112
  - -0.100365505
  - -0.1918455
  - -0.16460349
  - -0.00000008953824
  - -0.49246535
  - 0.57493806
  - 0.2906358
  - -0.066491276
  - 0.366952
  - 0.17870572
  - 0.10539819
  - 0.5582354
  - -0.020225879
  - 0.08406547
  - 0.19786692
  - -0.23720932
  - -0.24589969
  - -0.2233727
  - -0.047272824
  - 0.14289606
  - -0.13182339
  - -0.068675965
  - 0.30576387
  - 0.005884722
  - 0.57702225
  - 0.37619
  - 0.19947304
  - -0.06571561
  - -0.013789238
  - -0.4607217
  - 0.13837954
  - -0.49979728
  - -0.05951841
  - -0.07456833
  - -0.01761709
  - 0.005375992
  - 0.12400716
  - -0.059224106
  - 0.08751187
  - 0.2731401
  - -0.026147041
  - 0.15905686
  - -0.12986085
  - 0.07554814
  - -0.3738049
  - 0.2983418
  - 0.18286903
  - -0.1852028
  - -0.25390184
  - 0.066915356
  - 0.22108273
  - -0.16746211
  - 0.12273135
  - -0.020610465
  - 0.20577961
  - 0.058311388
  - 0.4655992
  - 0.66305304
  - 0.38511458
  - -0.09266765
  - 0.100283936
  - -0.30912867
  - -0.3527474
  - 0.44025826
  - 0.19845982
  - 0.13335061
  - -0.58064204
  - 0.059797723
