backends/candle/tests/snapshots/test_bert__emotions_batch.snap
---
source: backends/candle/tests/test_bert.rs
expression: predictions_batch
---
- - -6.548568
  - -6.3020196
  - -4.8671694
  - -3.9600189
  - -4.6329927
  - -6.2817054
  - -6.0696335
  - -5.774269
  - -6.9259534
  - -6.1909394
  - -5.6739364
  - -6.1698236
  - -7.5134573
  - -6.865875
  - -7.186481
  - -7.1281166
  - -8.2107115
  - -7.017144
  - -7.132131
  - -8.533407
  - -6.229485
  - -8.742311
  - -5.7791996
  - -8.65723
  - -8.258308
  - -6.6483216
  - -7.4060254
  - 3.0464954
- - -5.8167467
  - -6.611947
  - -5.2771964
  - -2.6306474
  - -4.6419144
  - -5.5797825
  - -5.7971735
  - -6.030578
  - -5.872076
  - 0.4537803
  - -3.0235898
  - -5.394437
  - -5.18668
  - -6.264914
  - -6.1962843
  - -6.9793677
  - -5.56749
  - -5.5210514
  - -5.889916
  - -4.86998
  - -5.6259933
  - -7.6109934
  - -4.3881946
  - -6.0390124
  - -4.9346933
  - -0.6715966
  - -6.399374
  - -2.4499245
- - -6.548568
  - -6.3020196
  - -4.8671694
  - -3.9600189
  - -4.6329927
  - -6.2817054
  - -6.0696335
  - -5.774269
  - -6.9259534
  - -6.1909394
  - -5.6739364
  - -6.1698236
  - -7.5134573
  - -6.865875
  - -7.186481
  - -7.1281166
  - -8.2107115
  - -7.017144
  - -7.132131
  - -8.533407
  - -6.229485
  - -8.742311
  - -5.7791996
  - -8.65723
  - -8.258308
  - -6.6483216
  - -7.4060254
  - 3.0464954
