backends/candle/tests/snapshots/test_bert__emotions_single.snap
---
source: backends/candle/tests/test_bert.rs
expression: predictions_single
---
- - -6.548568
  - -6.3020196
  - -4.8671694
  - -3.9600189
  - -4.6329927
  - -6.2817054
  - -6.0696335
  - -5.774269
  - -6.9259534
  - -6.1909394
  - -5.6739364
  - -6.1698236
  - -7.5134573
  - -6.865875
  - -7.186481
  - -7.1281166
  - -8.2107115
  - -7.017144
  - -7.132131
  - -8.533407
  - -6.229485
  - -8.742311
  - -5.7791996
  - -8.65723
  - -8.258308
  - -6.6483216
  - -7.4060254
  - 3.0464954
